--- a/example/index.html
+++ b/example/index.html
@@ -39,6 +39,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -69,6 +71,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -97,6 +101,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -131,6 +137,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -167,6 +175,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -201,6 +211,8 @@
                         <div class="col-auto align-self-center text-center">
                             <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-play">
                                 <i class="fa fa-play fa-fw"></i>
+                            </button>
+                            <button class="btn btn-primary btn-sm  ml-1 mr-2 jp-pause">
                                 <i class="fa fa-pause fa-fw"></i>
                             </button>
                         </div>
@@ -245,7 +257,7 @@
 <script src="../jplayer/jquery.jplayer.min.js"></script>
 <script src="../jplayer/jplayer.playlist.min.js"></script>
 <script src="../other/bootswatch.js"></script>
-<script src="../dist/jstrapplayer.min.js"></script>
+<script src="../dist/jstrapplayer.js"></script>
 <script>
     //<![CDATA[
     $(document).ready(function(){
